--- a/app/views/users/my_friends.html.erb
+++ b/app/views/users/my_friends.html.erb
@@ -10,7 +10,7 @@
           <h2>My friends</h2>
         </th>
       </tr> 
-      <tr> 
+        <tr> 
         <th>Name</th>
         <th>Email</th>
         <th>Actions</th>
@@ -22,12 +22,12 @@
           <td><%= friend.full_name %></td>
           <td><%= friend.email %></td>
           <td>
-          <%= link_to "View Profile", user_path(friend), class: "btn btn-primary btn-xs" %>
-            <td><%= link_to 'Remove Friend', friendship_path(friend), 
-                                      :method => :delete,
-                                      :data => { :confirm => "Are you sure?" },
-                                      :class => "btn btn-xs btn-danger" %>
-            </td>
+            <%= link_to "View Profile", user_path(friend), class: "btn btn-primary btn-xs" %>
+            <%= link_to 'Remove Friend', friendship_path(friend), 
+                                        :method => :delete,
+                                        :data => { :confirm => "Are you sure?" },
+                                        :class => "btn btn-xs btn-danger" %>
+          </td>
         </tr>
       <% end %>
     </tbody>
@@ -36,4 +36,4 @@
   <div class="row col-lg-12">
     <p class="lead">You don't have any friends yet. Go ahead and add some!</p>
   </div>  
-<% end %>
+<% end %>     
